# SmallShop

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
infra/app/: entrypoint.sh
infra/nginx/: default.conf
src/core/: api_router.py  base_http_client.py  settings.py  urls.py
src/shop/: admin.py  apps.py  choices.py  http_client.py  models.py  tasks.py
src/shop/api/: mixins.py  serializers.py  views.py
src/shop/management/commands/: createsuperuserauto.py
src/shop/migrations/: 0001_initial.py
src/templates/admin/shop/order/: change_form.html
