[tool.poetry]
name = "smallshop"
version = "0.1.0"
description = ""
authors = ["Artem Nosov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
pre-commit = "3.6.2"
django = "4.2"
djangorestframework = "3.14.0"
django-storages = "1.14.2"
psycopg2-binary = "2.9.7"
django-environ = "0.11.2"
boto3 = "1.34.60"
pillow = "10.1.0"
drf-yasg = "1.21.7"
django-celery-beat = "2.5.0"
celery = "5.3.4"
redis = "5.0.1"
flower = "2.0.1"
django-object-actions = "4.2.0"
httpx = "0.25.0"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "4.3"
django-extensions = "=3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
ignore-init-module-imports = true
src = ['src']
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
]
ignore = ["F401", "N806"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.isort]
known-first-party  = [
    'src'
]

[tool.black]
line-length = 120
